--- a/fcc-calculator/.eslintrc.json
+++ b/fcc-calculator/.eslintrc.json
@@ -1,11 +1,13 @@
 {
     "extends": "airbnb",
     "rules": {
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "react/destructuring-assignment": ["enabled", "never"]
     },
     "env": {
         "browser": true,
         "node": true,
         "jest": true
-    }
+    },
+    "parser": "babel-eslint"
 }
