--- a/todo-list/.eslintrc.json
+++ b/todo-list/.eslintrc.json
@@ -2,7 +2,8 @@
     "extends": "airbnb",
     "rules": {
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-        "react/destructuring-assignment": ["enabled", "never"]
+        "react/destructuring-assignment": ["enabled", "never"],
+        "react/forbid-prop-types": [false]
     },
     "env": {
         "browser": true,
