--- a/todo-list/package.json
+++ b/todo-list/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.7.1",
     "@material-ui/icons": "^3.0.1",
     "mongoose": "^5.4.2",
+    "netlify-lambda": "^1.1.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
